--- a/roles/set_custom_fact/templates/ideascube.vhost.j2
+++ b/roles/set_custom_fact/templates/ideascube.vhost.j2
@@ -6,7 +6,7 @@ server {
     listen   [::]:443 ssl;
     # the domain name it will serve for
 
-server_name {{ generic_project_name }}.ideascube.ideas-box.eu;
+server_name {{ generic_project_name }}.ideascube.docker.ideas-box.eu;
     charset     utf-8;
 
     # Django media
@@ -33,7 +33,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-server_name sites.{{ generic_project_name }}.ideascube.ideas-box.eu;
+server_name sites.{{ generic_project_name }}.ideascube.docker.ideas-box.eu;
 
     charset utf-8;
 
