Updating local domain name for ideascube/kolibri/kiwix

--- a/roles/set_custom_fact/templates/ideascube.vhost.j2
+++ b/roles/set_custom_fact/templates/ideascube.vhost.j2
@@ -6,7 +6,7 @@ server {
     listen   [::]:443 ssl;
     # the domain name it will serve for
 
-server_name {{ generic_project_name }}.ideascube.docker.ideas-box.eu;
+server_name {{ full_domain_name }};
     charset     utf-8;
 
     # Django media
