Adding a dev environment option. Now need to find an easy way to use it.

--- a/roles/set_custom_fact/templates/ideascube.vhost.j2
+++ b/roles/set_custom_fact/templates/ideascube.vhost.j2
@@ -33,7 +33,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-server_name sites.{{ generic_project_name }}.ideascube.docker.ideas-box.eu;
+server_name sites.{{ full_domain_name }};
 
     charset utf-8;
 
