--- a/roles/set_custom_fact/templates/kolibri.vhost.j2
+++ b/roles/set_custom_fact/templates/kolibri.vhost.j2
@@ -12,6 +12,6 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Scheme $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://kolibri:8080;
+        proxy_pass http://{{ kolibri_domain }}:8080;
     }
 }
